--- a/portfolio.css
+++ b/portfolio.css
@@ -5,6 +5,7 @@
   background-color: #43494C ;
   overflow-x: hidden;
   }
+  /*********************navbar************************/
   ul li{
       display: inline;
   }
@@ -54,6 +55,8 @@
     color: white;
     font-size: 25px;
   }
+
+  /*****************about********************/
   .about{
     width: 1400px;
     height: 80%;
@@ -94,14 +97,39 @@
     font-size: 20px;
     color: #5C0001;
   }
+  .btn{
+    padding-top: 30px;
+}
+ 
+.button1{
+    margin-right: 35px;
+ }
+
+.button2 a{
+    text-decoration: none;
+    color: #fff;
+ }
+.button1 , .button2{
+   border:none;
+   height: 40px;
+   width: 200px;
+   border-radius: 50px;
+   background-color: #0077CC;
+   color: white;
+   
+ }
+.button1:hover , .button2:hover{
+background-color: #5C0001;
+ }
   
+  /*******************************************/
   
   section {
     width: 100%;
     height: 100vh; 
    
   }
-  
+  /*******************work********************/
   .container {
     text-align: center; 
     padding: 20px;
@@ -145,7 +173,25 @@
     color: #666;
     line-height: 1.5;
   }
+  #work{
+       
+    background-color: white;
+    padding: 50px 20px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 100px auto;
+    max-width: 900px;
   
+}
+#work h2 {
+font-size: 28px;
+color: #5C0001;
+margin-bottom: 20px;
+text-transform: uppercase;
+letter-spacing: 0.1em;
+}
+  
+  /*******************contact********************/
   
   #contact {
     background-color: white;
@@ -220,45 +266,6 @@
     background-color: #293241;
   }
     
-.btn{
-        padding-top: 30px;
-    }
-     
-.button1{
-        margin-right: 35px;
-     }
 
- .button2 a{
-        text-decoration: none;
-        color: #fff;
-     }
-.button1 , .button2{
-       border:none;
-       height: 40px;
-       width: 200px;
-       border-radius: 50px;
-       background-color: #0077CC;
-       color: white;
-       
-     }
-.button1:hover , .button2:hover{
-    background-color: #5C0001;
-     }
      
- #work{
-       
-            background-color: white;
-            padding: 50px 20px;
-            text-align: center;
-            border-radius: 10px;
-            margin: 100px auto;
-            max-width: 900px;
-          
-     }
- #work h2 {
-        font-size: 28px;
-        color: #5C0001;
-        margin-bottom: 20px;
-        text-transform: uppercase;
-        letter-spacing: 0.1em;
-      }
+ 
